--- a/src/components/molecules/Nav/nav.scss
+++ b/src/components/molecules/Nav/nav.scss
@@ -9,7 +9,7 @@ nav {
   );
   width: 100%;
   .ad_nav-links {
-    grid-column: 1/4;
+    grid-column: 1/6;
     display: flex;
     gap: 40px;
   }
